2023-03-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mom]: Generate test script even if we'll skip it.

	* contrib/mom/examples/test-mom.sh.in: Check availability of
	required pdfinfo(1) and pdfimages(1) commands at test time; skip
	if they aren't present.
	* contrib/mom/mom.am [!HAVE_PDFTOOLS]: Generate the test script
	even if these tools aren't available.

2023-03-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_NOTICE): Adapt wording of notice
	to presence and identity of Ghostscript interpreter command.
	Clarify that it is gropdf(1) specifically that traverses the
	Ghostscript search path reported by its "-h" option.

	Continues <https://savannah.gnu.org/bugs/?63808>.  Thanks to
	Deri James for the ongoing discussion.

2023-02-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	[devpdf]: Revise tests.

	* font/devpdf/tests/check-default-foundry.sh.in: Test only the
	base 14 fonts of the PDF standard unconditionally.  Test the
	remainder from the set of 35 commonly distributed only if a
	Ghostscript interpreter was detected at configuration time,
	because the latter fonts _must_ be embedded in PDF documents.
	If they're not present, skip the test rather than failing it.
	* font/devpdf/tests/check-urw-foundry.sh.in: Skip test if no URW
	fonts detected at configuration time, rather than failing it.
	* m4/groff.m4 (GROFF_GROPDF_PROGRAM_NOTICE)
	(GROFF_URW_FONTS_NOTICE): Drop warnings of expected test
	failures.  The tests no longer fail in the anticipated
	circumstances.

2023-02-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[devpdf]: Generate tests from template files, so we can populate
	the test scripts with information determined at configuration.
	The default foundry test depends on $GHOSTSCRIPT, and the URW
	foundry test on $urwfontsdir.

	* font/devpdf/tests/check-default-foundry.sh:
	* font/devpdf/tests/check-urw-foundry.sh: Rename these...
	* font/devpdf/tests/check-default-foundry.sh.in: